--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <div class="content-form">
             <form action="" class="formulario">
                 <div class="single-input">
-                    <input type="text" class="input" id="descricao" required>
+                    <input type="text" class="input"  required id="descricao">
                     <label for="descrição">Descrição</label>
                 </div>
                 <div class="single-input">
-                    <input type="number" step="0.01" class="input" id="valor" required>
+                    <input type="number" step="0.01" class="input"  required id="valor">
                     <label for="valor">Valor</label>
                 </div>
 
@@ -55,7 +55,6 @@
                     <input type="radio" name="modalidade" id="saida" class="radio">
                     <label for="saida">Saída</label>
                 </div>
-                <input type="hidden" name="id" id="formid">
                 <button type="submit" id="button">Salvar <ion-icon name="add-circle-outline"
                         id="salvar"></ion-icon></button>
 
@@ -64,58 +63,12 @@
         <div class="table">
             <table class="tabela">
                 <thead>
-                    <tr>
                         <th>Descrição</th>
                         <th>Valor</th>
+                        <th>Data</th>
                         <th>Tipo</th>
-                        <th></th>
-                    </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Nubank- Cartão de crédito</td>
-                        <td>R$ 200,00</td>
-                        <td>Saída</td>
-                        <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                            <ion-icon name="trash" class="group-icons-trash"></ion-icon>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>Investimento</td>
-                        <td>R$ 400,00</td>
-                        <td>Saída</td>
-                        <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                            <ion-icon name="trash" class="group-icons-trash"></ion-icon>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>Salário</td>
-                        <td>R$ 1000,00</td>
-                        <td>Entrada</td>
-                        <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                            <ion-icon name="trash" class="group-icons-trash"></ion-icon>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>*</td>
-                        <td>*</td>
-                        <td>*</td>
-                        <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                            <ion-icon name="trash" class="group-icons-trash"></ion-icon>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>*</td>
-                        <td>*</td>
-                        <td>*</td>
-                        <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                            <ion-icon name="trash" class="group-icons-trash"></ion-icon>
-                        </td>
-                    </tr>
                 </tbody>
             </table>
         </div>
@@ -131,6 +84,6 @@
         </div>
     </footer>
 </body>
-<script src="index.js"></script>
+<script src="script.js"></script>
 
 </html>
