--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <div class="content-form">
             <form action="" class="formulario">
                 <div class="single-input">
-                    <input type="text" class="input"  required id="descricao">
+                    <input type="text" class="input" id="descricao" required>
                     <label for="descrição">Descrição</label>
                 </div>
                 <div class="single-input">
-                    <input type="number" step="0.01" class="input"  required id="valor">
+                    <input type="number" step="0.01" class="input" id="valor" required>
                     <label for="valor">Valor</label>
                 </div>
 
@@ -55,6 +55,7 @@
                     <input type="radio" name="modalidade" id="saida" class="radio">
                     <label for="saida">Saída</label>
                 </div>
+                <input type="hidden" name="id" id="formid">
                 <button type="submit" id="button">Salvar <ion-icon name="add-circle-outline"
                         id="salvar"></ion-icon></button>
 
@@ -63,12 +64,23 @@
         <div class="table">
             <table class="tabela">
                 <thead>
+                    <tr>
                         <th>Descrição</th>
                         <th>Valor</th>
-                        <th>Data</th>
+                        <th>Lançamento</th>
                         <th>Tipo</th>
+                    </tr>
                 </thead>
                 <tbody>
+                    <tr>
+                        <td>Nubank- Cartão de crédito</td>
+                        <td>R$ 200,00</td>
+                        <td>Saída</td>
+                        <td>
+                            <button><ion-icon name="create" class="group-icons-create"></ion-icon>
+                            <button><ion-icon name="trash" class="group-icons-trash"></ion-icon></button>
+                            </td>
+                    </tr>
                 </tbody>
             </table>
         </div>
