--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@
             </div>
             <div class="blocks">
                 <h3 class="text">Saldo
-                    
-                    
-                       <img src="icons/saldos.png" alt="" class="group-icons">
-                <img src="icons/alerta.png" alt="" id="alerta">
+                    <img src="icons/saldos.png" alt="" class="group-icons" id="imagem1">
+                    <img src="icons/alerta.png" alt="" class="group-icons" id="imagem2">
                 </h3>
                 <span id="card-saldo"> 0,00</span>
             </div>
