--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 </div>
 
                 <div class="group-input-radio">
-                    <input type="radio" name="modalidade" id="entrada" class="radio" value="entrada">
+                    <input type="radio" name="modalidade" id="entrada" class="radio" value="entrada" required>
                     <label for="entrada">Entrada</label>
                     
-                    <input type="radio" name="modalidade" id="saida" class="radio" value="saida">
+                    <input type="radio" name="modalidade" id="saida" class="radio" value="saida" required>
                     <label for="saida">Saída</label>
                 </div>
                 <input type="hidden" name="id" id="formid">
@@ -74,15 +74,6 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Nubank- Cartão de crédito</td>
-                        <td>R$ 200,00</td>
-                        <td>Saída</td>
-                        <td>
-                            <button id="btn-create"><ion-icon name="create" class="group-icons-create"></ion-icon>
-                            <button id="btn-trash"><ion-icon name="trash" class="group-icons-trash"></ion-icon></button>
-                            </td>
-                    </tr>
                 </tbody>
             </table>
         </div>
