--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
                     Proventos
                     <img src="icons/proventos.png" alt="" class="group-icons">
                 </h3>
-                <span id="card-entrada"> 0,00</span>
+                <span id="card-entrada" class="card">0,00</span>
             </div>
             <div class="blocks">
                 <h3 class="text">Gastos
                     <img src="icons/gastos.png" alt="" class="group-icons">
                 </h3>
-            <span id="card-saida"> 0,00</span>
+                <span id="card-saida" class="card">0,00</span>
             </div>
             <div class="blocks">
                 <h3 class="text">Saldo
                     <img src="icons/saldos.png" alt="" class="group-icons" id="imagem1">
                     <img src="icons/alerta.png" alt="" class="group-icons" id="imagem2">
                 </h3>
-                <span id="card-saldo"> 0,00</span>
+                <span id="card-saldo" class="card">0,00</span>
             </div>
         </div>
         <div class="content-form">
@@ -53,7 +53,7 @@
                 <div class="group-input-radio">
                     <input type="radio" name="modalidade" id="entrada" class="radio" value="entrada" required>
                     <label for="entrada">Entrada</label>
-                    
+
                     <input type="radio" name="modalidade" id="saida" class="radio" value="saida" required>
                     <label for="saida">Saída</label>
                 </div>
